# Koi-Monitor

./: .cursorignore  .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  build.bat  dev.bat  index.html  koi.bat  package-lock.json  package.json  prompt-slides.txt  readmegit.md  setup.bat  tailwind.config.js  vite.config.js  vite.config.ts  widget.html
.claude/: settings.local.json
.cursor/rules/: koi-core.mdc  koi-design-system.mdc  koi-frontend.mdc  koi-rust-backend.mdc
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: audit.yml  release.yml
docs/: DEVELOPMENT.md  marketing-context.md
scripts/: diag-drivers.ps1  extract-release-notes.ps1  fix-windows-access.ps1  generate_koi_icon.py  kill-dev-port.ps1  koi-lib.ps1  koi.ps1  postinstall-esbuild.mjs  prepare-release.ps1
src/: App.tsx  WidgetApp.tsx  appVersion.ts  main.tsx  recharts-es6.d.ts  widget.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dns.rs  driver_status.rs  driver_store.rs  driver_updates.rs  driver_version.rs  drivers.rs  gaming_latency.rs  lib.rs  main.rs  memory.rs  security.rs  subprocess.rs
src/constants/: driverStatus.ts
src/hooks/: useAmbientMusic.ts  useAtmosphereSync.ts  useAutostart.ts  useDriversData.ts  useEasterEggMusic.ts  useFocusTrap.ts  useKeyboardNavigation.ts  useLiveUptime.ts  useStorageSync.ts  useSystemTray.ts  useTelemetryPoller.ts  useThresholdAlerts.ts  useTranslation.ts  useWidgetSync.ts  (+2 more)
(+90 files in other folders)
