[package]
name = "koi-monitor"
version = "1.1.4"
description = "Koi System Monitor - Windows 11 System Monitoring App"
authors = ["Katana"]
edition = "2021"

[lib]
name = "koi_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["net", "time", "rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.11"
windows = { version = "0.58.0", features = ["Win32_Graphics_Dxgi", "Win32_Foundation"] }
wmi = "0.13"
tauri-plugin-autostart = "2"
